--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
       - echo "Installing Rust Nightly Toolchain"
-      - curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain nightly
+      - curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain nightly -y
 
   pre_build:
     commands:
