Fix up static file management

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,8 @@ os: linux
 files:
   - source: target/release/alexlillianwedding
     destination: /usr/local/bin
+  - source: static
+    destination: /var/www/weddingwebsite
 
 hooks:
   ApplicationStart:
