--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,8 @@ authors = ["Alex"]
 
 [dependencies]
 maud = { version = "0.17.2", features = ["rocket"] }
-rocket = "0.3"
-rocket_codegen = "0.3"
+rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
+rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
+
+[patch.crates-io]
+ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }
