--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = ["Alex"]
 
 [dependencies]
-maud = { version = "0.17.2", features = ["rocket"] }
+maud = { git = "https://github.com/anxiousmodernman/maud.git", branch = "121_proc_macro", features = ["rocket"] }
 rocket = "0.3"
 rocket_codegen = "0.3"
